# openTeleprompt

./: .gitignore  CLAUDE.md  README.md  build_mac.sh  icon.icns  main.js  package-lock.json  package.json  preload.js  settings.html  uninstall.sh
.github/workflows/: release.yml
docs/: CLAUDE.md  CONTRIBUTING.md  DESIGN_PHILOSOPHY.md  GEMINI.md  index.html  main.css
docs/superpowers/plans/: 2026-04-20-settings-prompter-unification.md
docs/superpowers/specs/: 2026-04-20-settings-prompter-unification-design.md
frontend/renderer/: app.js  index.html  settings-win.html  settings.html  style.css  welcome.html
landing/: index.html
renderer/: app.js  index.html  settings.html  style.css
src/: App.jsx  settings.css  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/lib/: api.js  fileUtils.js  fileUtils.test.js  mic.js  mic.test.js  tokenizer.js  tokenizer.test.js
src/store/: index.js
src/views/: EditView.jsx  IdleView.jsx  ReadView.jsx  ReadView.seekToCue.test.jsx  SettingsView.jsx  SettingsView.test.jsx
