[package]
name = "open-teleprompter"
version = "1.0.0"
description = "OpenTeleprompter — voice-activated teleprompter"
authors = ["Arun Kumar"]
edition = "2021"

[lib]
name = "open_teleprompter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "open-teleprompter"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "devtools", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-fs = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

[target.'cfg(target_os = "macos")'.dependencies]

[profile.release]
panic = "abort"
codegen-units = 1
opt-level = "s"
lto = true
strip = true
